fix bad alignment on home

--- a/src/app/SharedComponentModules/SmallComponents/scroll-frame/scroll-frame/scroll-frame.component.css
+++ b/src/app/SharedComponentModules/SmallComponents/scroll-frame/scroll-frame/scroll-frame.component.css
@@ -1,5 +1,5 @@
 section#frame {
-    position: relative;
+    display: block;
     max-height: 500px;
     width: calc(100% - 22px);
     max-width: 600px;
